@@ -23,6 +23,8 @@ PyKota NEWS :
        
     - 1.24alpha15 :
         
+        - optimized pkbcodes using edpykota as the model.
+        
         - 'edpykota --list' and 'pkusers --list' are now authorized 
           to mere mortal users, but the list is restricted to informations
           about the current user.
